tree-sitter-nuke/test/corpus/calls.txt
================================================================================
A call takes one operand, and `import` is a name only after the sigil
================================================================================

import := @import "./palette.nuke"

{import = @concat ["#" import.accent]}

--------------------------------------------------------------------------------

(document
  (binding
    (ident)
    (call
      (ident)
      (string)))
  (tuple
    (field
      (ident)
      (call
        (ident)
        (list
          (string)
          (access
            (reference
              (ident))
            (ident)))))))

================================================================================
A call takes an operand and not a value, so the projection reads the import
================================================================================

@import "./palette.nuke".accent

--------------------------------------------------------------------------------

(document
  (access
    (call
      (ident)
      (string))
    (ident)))
