tree-sitter-nuke/test/corpus/interpolation.txt
================================================================================
A hole holds a value, and text either side of it is not a string
================================================================================

$"gaps {size}px around {theme.name}"

--------------------------------------------------------------------------------

(document
  (interpolation
    (hole
      (reference
        (ident)))
    (hole
      (access
        (reference
          (ident))
        (ident)))))

================================================================================
A literal brace is doubled, and `{{` wins over a hole
================================================================================

$"{{ {a} }}"

--------------------------------------------------------------------------------

(document
  (interpolation
    (doubled_brace)
    (hole
      (reference
        (ident)))
    (doubled_brace)))

================================================================================
A tuple reaches a hole through the space `{{` costs it
================================================================================

$"{ {a = 1}.a }"

--------------------------------------------------------------------------------

(document
  (interpolation
    (hole
      (access
        (tuple
          (field
            (ident)
            (number)))
        (ident)))))

================================================================================
An interpolation nests, because a hole holds any value
================================================================================

$"{ $"{a}" }"

--------------------------------------------------------------------------------

(document
  (interpolation
    (hole
      (interpolation
        (hole
          (reference
            (ident)))))))

================================================================================
A specifier is a raw tail, so a fill may be a space
================================================================================

[$"{n:06X}" $"{n: >8}" $"{n:#08X}"]

--------------------------------------------------------------------------------

(document
  (list
    (interpolation
      (hole
        (reference
          (ident))
        (format_spec)))
    (interpolation
      (hole
        (reference
          (ident))
        (format_spec)))
    (interpolation
      (hole
        (reference
          (ident))
        (format_spec)))))

================================================================================
Whitespace and comments stand inside a hole and nowhere else in the quotes
================================================================================

$"  {  # which
	a  }  "

--------------------------------------------------------------------------------

(document
  (interpolation
    (hole
      (comment)
      (reference
        (ident)))))

================================================================================
An interpolation with no hole is still not a string
================================================================================

[$"" $"no holes at all"]

--------------------------------------------------------------------------------

(document
  (list
    (interpolation)
    (interpolation)))
