tree-sitter-nuke/test/corpus/numbers.txt
================================================================================
A marker is a width, and it stands anywhere
================================================================================

[0b1010 0q3201 0o755 0xFE8019 0b101110100xC 0xDEADxBEEF -0xFF]

--------------------------------------------------------------------------------

(document
  (list
    (number)
    (number)
    (number)
    (number)
    (number)
    (number)
    (number)))

================================================================================
One spelling per number, and the other spellings name themselves
================================================================================

[0xff 01 1E5 1e+5 1e05 1. 0x1.8]

--------------------------------------------------------------------------------

(document
  (list
    (malformed_number)
    (malformed_number)
    (malformed_number)
    (malformed_number)
    (malformed_number)
    (malformed_number)
    (malformed_number)))

================================================================================
Ten is no power of two, so `0d5` is a number beside a name
================================================================================

[0d5]

--------------------------------------------------------------------------------

(document
  (list
    (number)
    (reference
      (ident))))

================================================================================
A number takes the point with it, so a dyadic with a fraction is one bad token
================================================================================

[0xFF.b]

--------------------------------------------------------------------------------

(document
  (list
    (malformed_number)
    (reference
      (ident))))

================================================================================
The spellings that are canonical
================================================================================

[0 -0 42 1.0 1e5 0e5 -2.5e-3]

--------------------------------------------------------------------------------

(document
  (list
    (number)
    (number)
    (number)
    (number)
    (number)
    (number)
    (number)))
