tree-sitter-nuke/test/corpus/values.txt
================================================================================
A document is one value
================================================================================

{host = "localhost" port = 80}

--------------------------------------------------------------------------------

(document
  (tuple
    (field
      (ident)
      (string))
    (field
      (ident)
      (number))))

================================================================================
Braces hold a tuple when their pairs use `=`
================================================================================

{a = 1 b = [2 3] c = {d = Null}}

--------------------------------------------------------------------------------

(document
  (tuple
    (field
      (ident)
      (number))
    (field
      (ident)
      (list
        (number)
        (number)))
    (field
      (ident)
      (tuple
        (field
          (ident)
          (atom))))))

================================================================================
Braces hold a map when their pairs use `=>`
================================================================================

{"a" => 1 [2 3] => True {x = 1} => Null}

--------------------------------------------------------------------------------

(document
  (map
    (entry
      (string)
      (number))
    (entry
      (list
        (number)
        (number))
      (atom))
    (entry
      (tuple
        (field
          (ident)
          (number)))
      (atom))))

================================================================================
An empty block is a tuple, both readings denoting the same collection
================================================================================

[{} []]

--------------------------------------------------------------------------------

(document
  (list
    (tuple)
    (list)))

================================================================================
Collections carry no separators, so a line is the only grouping there is
================================================================================

[1 "two" Three -4.5 2.5e-3]

--------------------------------------------------------------------------------

(document
  (list
    (number)
    (string)
    (atom)
    (number)
    (number)))

================================================================================
An escape is a node of its own, and a plain string is literal to its last
character
================================================================================

["a\tb\u{1F600}\"" "{icon} #{percentage}%"]

--------------------------------------------------------------------------------

(document
  (list
    (string
      (escape_sequence)
      (escape_sequence)
      (escape_sequence))
    (string)))

================================================================================
A comment runs to the end of its line and stands wherever whitespace does
================================================================================

# above
{a = # beside
	1}

--------------------------------------------------------------------------------

(document
  (comment)
  (tuple
    (field
      (ident)
      (comment)
      (number))))
